--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 								<h2 style="text-align:left">Masther Thesis Project</h2>
 								<details style="text-align:left">
 									<summary> <b style="color:rgb(0, 0, 0);">Increase in productivity of an electronic choice sector in a cork industry <a href="uminho/Dissertação Beatriz Fernandes Alves Rodrigues.pdf" target="_blank"> (Check it out)</a> </b></summary>
-										&emsp;&emsp;•  Developed a VBA program to evaluate the impact of a new maintenance operation on productivity <a href="images/amorim_excel.pdf" target="_blank" >(Figure X)</a>.<br>
+										&emsp;&emsp;•  Developed a VBA program to evaluate the impact of a new maintenance operation on productivity <a href="images/amorim_excel.pdf" target="_blank" >(Figure 1)</a>.<br>
 										&emsp;&emsp;•  Accomplished setup time reduction by 33% and defects reduction by 16% through continuous improvement tools: SMED methodology, parallel machines scheduling and andon normalization.<br>
 										&emsp;&emsp;•  Established autonomous maintenance activities and developed standard documents to ensure optimal equipment operation and process safety without costly downtime.<br>
 										&emsp;&emsp;•  Reduced reprocessing and transportation costs of two products by 79% through machine improvement.
@@ -199,17 +199,17 @@
 									<summary > <b style="color:rgb(0, 0, 0);">Workflow improvement using Lean tools in a non-profit organization</b></summary>
 										&emsp;&emsp;• Collaborated with management team and teammates to uncover new process opportunities.<br>
 										&emsp;&emsp;• Reduced non-value added time by 9% by implementing a kanban system
-										<a href="images/refoodkanban.jpg" target="_blank" >(Figure 1)</a>.
+										<a href="images/refoodkanban.jpg" target="_blank" >(Figure 2)</a>.
 										<br>
 										&emsp;&emsp;• Workspace organization through 5s methodology
-										<a href="images/refood5s.jpg" target="_blank" >(Figure 2)</a>. <br>
+										<a href="images/refood5s.jpg" target="_blank" >(Figure 3)</a>. <br>
 										
 								</details>
 							
 
 								<details style="text-align:left">
 									<summary> <b style="color:rgb(0, 0, 0);">Analysis and improvement of Built-in System Interface (BSI) area of a auto-parts company</b></summary>
-										&emsp;&emsp;• Reduced cycle time by 5% through line balancing and simulation <a href="images/aptiv_simline.pdf" target="_blank" >(Figure 3)</a>. <br>
+										&emsp;&emsp;• Reduced cycle time by 5% through line balancing and simulation <a href="images/aptiv_simline.pdf" target="_blank" >(Figure 4)</a>. <br>
 										&emsp;&emsp;• Prevented and controlled health risks through the application of ergonomic tools: EWA, RULA and MAC <a href="artigos/Artigo SHO2019.pdf" target="_blank" >(Conference paper 1)</a>. <br>
 										&emsp;&emsp;• Development of a BPMN with the collaboration of all the organization’s sectors. <br>
 										&emsp;&emsp;• Case Study: Preventing short and long-term information loss  
