--- a/certification.html
+++ b/certification.html
@@ -42,7 +42,8 @@
 								<h2 >
 									<b>Data Science</b>
 								</h2>
-								<p> <a href="data/PythonProjectforDataScience.pdf" target="_blank" >Python Project for Data Science;</a><br>
+								<p> <a href="data/DatabasesandSQLforDataSciencewithPython.pdf" target="_blank" >Databases and SQL for Data Science with Python</a><br>
+									<a href="data/PythonProjectforDataScience.pdf" target="_blank" >Python Project for Data Science;</a><br>
 									<a href="data/PythonforDataScienceAIDevelopment.pdf" target="_blank" >Python for Data Science, AI & Development;</a><br>
 									<a href="data/DataScienceMethodology.pdf" target="_blank" >Data Science Methodology;</a><br>
 									<a href="data/ToolsforDataScience.pdf" target="_blank" >Tools for Data Science;</a><br>
