--- a/certification.html
+++ b/certification.html
@@ -43,7 +43,7 @@
 									<b>Data Science</b>
 								</h2>
 								<p> 
-									<a href="data/DatabasesandSQLforDataSciencewithPython.pdf" target="_blank" >Databases and SQL for Data Science with Python;</a><br>
+									<a href="data/DatabasesandSQL.pdf" target="_blank" >Databases and SQL for Data Science with Python;</a><br>
 									<a href="data/PythonProjectforDataScience.pdf" target="_blank" >Python Project for Data Science;</a><br>
 									<a href="data/PythonforDataScienceAIDevelopment.pdf" target="_blank" >Python for Data Science, AI & Development;</a><br>
 									<a href="data/DataScienceMethodology.pdf" target="_blank" >Data Science Methodology;</a><br>
