--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
 										<h3>Professional Internship</h3>
 										<p>(1) Continuous improvement in the area of quality and (2) Research and analysis of innovation projects</p>
 									</li>
+									<li>
+										<span class="icon major style5 fa-gem"></span>
+										<h3>INOV Contacto - International Internship</h3>
+										<p> Data Analysis and Continuous improvement projects</p>
+									</li>	
+
 								</ul>
 							</section>
 							-->
