--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 								</header>
 								<p style="text-align:left"> Check out my projects down below. To see more information about a specific project, you can click on it.</p>
 
-								<h2 style="text-align:left">International Internship - INOV Contacto [Sodecia, Czech Republic]</h2>
-					
+								<h2 style="text-align:left">International Internship - INOV Contacto </h2>
+								<b>Sodecia, Czech Republic</b>
 								<details style="text-align:left">
 									<summary> <b style="color:rgb(0, 0, 0);"> Data Analysis and Continuous improvement projects </b></summary>
 										&emsp;&emsp;•	Designed a database about Customer Complaints in SQL (created tables and corrected data errors).<br>
