--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 								<h2 style="text-align:left">International Internship - INOV Contacto </h2>
 								
 								<details style="text-align:left">
-									<summary> <b style="color:rgb(0, 0, 0);"> Data Analysis and Continuous improvement projects [Sodecia, Czech Republic]</b></summary>
+									<summary> <b style="color:rgb(0, 0, 0);"> Data Analysis and Continuous improvement projects</b> [Sodecia, Czech Republic]</summary>
 										&emsp;&emsp;•	Designed a database about Customer Complaints in SQL (created tables and corrected data errors).<br>
 										&emsp;&emsp;•	Development of Continuous Improvement projects: reduction of inspection hours (-144 hours/year), analysis and reduction of setup time (estimated reduction: -13%) and batch size optimization.<br>
 										
