--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										
 										</header>
 										<p>Hello! I am an <b> Industrial Engineer</b>  from Braga, Portugal. 
-											During college, I realized that my main interest is <b>data analysis and design for problem-solving </b> . 
+											During college, I realized that my main interest is <b>data analysis and lean methodologies for problem-solving </b> . 
 											These themes have come along with me in various projects, including my master thesis.
 											<br /> Now, I invite you to have a look through some of my projects and my training in the sections below. 
 												And if you need some help with an upcoming project, feel free to <a href="#cta">contact me</a>.
