--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 						<h1>Hi, I'm Beatriz Rodrigues!</h1>
 						<p>Industrial Engineer</p>
 					</header>
