--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Hi, I'm Beatriz Rodrigues!</h1>
-						<p>Industrial Engineer</p>
+						<p>MSc in Industrial Engineering and Management</p>
 					</header>
 
 				<!-- Nav -->
