--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 							<section id="cta" class="main">
 								<div class="inner">
 									<h2>Contact Me</h2>
-									<p>Want to get in touch? I'd love to hear from you! Use the form below to send me an e-mail. </p>
+									<p>Feel free to utilize the form below to reach out to me via email. </p>
 									
 									<div class="split style1">
 										<section>
