--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								
 										<p style="text-align:left;"><span class="image left"><img src="images/p7.jpg" alt="" style="max-height: 150px; max-width: 150px;" /></span> 
 											<!-- <b>Focus of Industrial Engineering:</b> Production System Optimization. <br /> -->
-											<b>Coursework in</b>: Operations Management • Logistics • Ergonomics • Production Planning • Quality Management <br />
+											<b>Coursework in</b>: Operations Management • Logistics • Project Management • Production Planning • Quality <br />
 											<b>Two Scientific Contributions</b>: <b>[1]</b> CISTI, Coimbra: “Corporate memory in the lean context: Preventing short and long-term information loss”  <b>[2]</b> SHO, Guimarães: “Ergonomic Analysis of a Fuse Insertion, Press-fit and Test Workstation Using EWA
 											Method - Ergonomic Workplace Analysis” <br />
 											<b> Master Thesis:</b> Increase in Productivity of an Electronic Choice Sector in a Cork Industry (18/20)
