--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 											<b>Coursework in</b>: Operations Management • Logistics • Project Management • Production Planning • Quality <br />
 											<b>Two Scientific Contributions</b>: <b>[1]</b> CISTI, Coimbra: “Corporate memory in the lean context: Preventing short and long-term information loss”  <b>[2]</b> SHO, Guimarães: “Ergonomic Analysis of a Fuse Insertion, Press-fit and Test Workstation Using EWA
 											Method - Ergonomic Workplace Analysis” <br />
-											<b> Master Thesis:</b> Increase in Productivity of an Electronic Choice Sector in a Cork Industry (18/20)
+											<b> Master Thesis:</b> <a href="uminho/Dissertação Beatriz Fernandes Alves Rodrigues.pdf" target="_blank"> Increase in Productivity of an Electronic Choice Sector in a Cork Industry (18/20) </a> 
 										</p>
 								
 								<h3 style="text-align:left"> 
