--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 											<h2>Beatriz Rodrigues </h2>
 										
 										</header>
-										<p>Hello! I'm Beatriz Rodrigues, a Portfolio Manager at AICEP, the government Agency for the Ministry of Foreign Affairs of Portugal. 
+										<p>Hello! I'm Beatriz Rodrigues, a Portfolio Manager at AICEP, a government Agency for the Ministry of Foreign Affairs of Portugal. 
 											I started my career at AICEP through the INOV Contacto program, where I had the opportunity to work as an Engineering Analyst in the Czech Republic. 
 											During this time, I  represented Portugal and collaborated with Sodecia Czech Republic, an automotive components manufacturer.
 											<br /> Now, I would like to invite you to explore some of the projects I have undertaken and also the training I have received in the sections below. 
@@ -415,7 +415,7 @@
 					<footer id="footer">
 						<section>
 							<h2>Beatriz Rodrigues</h2>
-							<p>Hello! I'm Beatriz Rodrigues, a Portfolio Manager at AICEP, the government Agency for the Ministry of Foreign Affairs of Portugal.</p>
+							<p>Hello! I'm Beatriz Rodrigues, a Portfolio Manager at AICEP.</p>
 							
 						</section>
 						<section>
