--- a/certification.html
+++ b/certification.html
@@ -80,8 +80,7 @@
 					<footer id="footer">
 						<section>
 							<h2>Beatriz Rodrigues</h2>
-							<p>Hello! I am an Industrial Engineer from Braga, Portugal. My main interest is data analysis and design for problem-solving. These themes have come along with me in various projects.
-								If you need some help with an upcoming project, feel free to contact me.</p>
+							<p>Hello! I'm Beatriz Rodrigues, a Portfolio Manager at AICEP.</p>
 							
 						</section>
 						<section>
