--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 										<p style="text-align:left;"><span class="image left"><img src="images/p7.jpg" alt="" style="max-height: 150px; max-width: 150px;" /></span> 
 											<!-- <b>Focus of Industrial Engineering:</b> Production System Optimization. <br /> -->
 											<b>Coursework in</b>: Operations Management • Logistics • Project Management • Production Planning • Quality <br />
-											<b>Two Scientific Contributions</b>: <b>[1]</b> <a href="artigos/Artigo SHO2019.pdf" target="_blank">CISTI, Coimbra: “Corporate memory in the lean context: Preventing short and long-term information loss”</a>
-											<b>[2]</b> <a href="artigos/EET-tarefa-1 FINAL.pdf" target="_blank" > SHO, Guimarães: “Ergonomic Analysis of a Fuse Insertion, Press-fit and Test Workstation Using EWA Method - Ergonomic Workplace Analysis”  </a>.
+											<b>Two Scientific Contributions</b>: <b>[1]</b>CISTI, Coimbra: <a href="artigos/Artigo SHO2019.pdf" target="_blank">“Corporate memory in the lean context: Preventing short and long-term information loss”</a>
+											<b>[2]</b> SHO, Guimarães: <a href="artigos/EET-tarefa-1 FINAL.pdf" target="_blank" >“Ergonomic Analysis of a Fuse Insertion, Press-fit and Test Workstation Using EWA Method - Ergonomic Workplace Analysis”  </a>.
 											
 											
 											<b> Master Thesis:</b> <a href="uminho/Dissertação Beatriz Fernandes Alves Rodrigues.pdf" target="_blank"> Increase in Productivity of an Electronic Choice Sector in a Cork Industry </a> (18/20)
