--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 											<li><a href="cv/BeatrizRodriguesCV.pdf" class="button" download="">Download my CV</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/p9.jpg" alt="" /></span>
+									<span class="image"><img src="images/p9.png" alt="" /></span>
 								</div>
 							</section>
 							
