--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 					<footer id="footer">
 						<section>
 							<h2>Beatriz Rodrigues</h2>
-							<p>Hello! I'm Beatriz Rodrigues, a Portfolio Manager at AICEP.</p>
+							<p>Hello! I'm Beatriz Rodrigues, a Portfolio Manager at AICEP</p>
 							
 						</section>
 						<section>
