--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 										</header>
 										<p>Hello! I'm Beatriz Rodrigues, a Portfolio Manager at AICEP, a government Agency for the Ministry of Foreign Affairs of Portugal. 
 											I started my career at AICEP through the INOV Contacto program, where I had the opportunity to work as an Engineering Analyst in the Czech Republic. 
-											During this time, I  represented Portugal and collaborated with Sodecia Czech Republic, an automotive components manufacturer.
+											During this time, I collaborated with Sodecia Czech Republic, an automotive components manufacturer, to ultimately support their internationalization efforts.
 											<br /> 
 											<!-- Wrapper Now, I would like to invite you to explore some of the projects I have undertaken and also the training I have received in the sections below. -->
 											</p>
