--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 							<section id="cta" class="main">
 								<div class="inner">
 									<h2>Contact Me</h2>
-									<p>Feel free to utilize the form below to reach out to me via email. </p>
+									<p>Feel free to use the form below to reach out to me via email. </p>
 									
 									<div class="split style1">
 										<section>
