--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Hi, I'm Beatriz Rodrigues!</h1>
+						<h1>Hello, I'm Beatriz Rodrigues!</h1>
 						<p>MSc in Industrial Engineering and Management</p>
 					</header>
 
@@ -40,7 +40,7 @@
 											<h2>Beatriz Rodrigues </h2>
 										
 										</header>
-										<p>Hello! I'm Beatriz Rodrigues, a Portfolio Manager at AICEP, a government Agency for the Ministry of Foreign Affairs of Portugal. 
+										<p>Hello, I'm Beatriz Rodrigues, a Portfolio Manager at AICEP, a government Agency for the Ministry of Foreign Affairs of Portugal. 
 											I started my career at AICEP through the INOV Contacto program, where I had the opportunity to work as an Engineering Analyst in the Czech Republic. 
 											During this time, I collaborated with Sodecia Czech Republic, an automotive components manufacturer, to ultimately support their internationalization efforts.
 											<br /> 
