--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Hello, I'm Beatriz Rodrigues!</h1>
+						<h1>Hi, I'm Beatriz Rodrigues!</h1>
 						<p>MSc in Industrial Engineering and Management</p>
 					</header>
 
