--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 								<h2 style="text-align:left">Internships</h2>
 							
 								<details style="text-align:left">
-									<summary> <b style="color:rgb(0, 0, 0);">Professional Internship: Continuous improvement in the area of quality and Research and analysis of innovation projects </b> [dst group, Portugal]</summary>
+									<summary> <b style="color:rgb(0, 0, 0);">Professional Internship:  Continuous Improvement Projects in the Quality and Innovation Department</b> [dst group, Portugal]</summary>
 										&emsp;&emsp;•	Conducted internal audits and provided lean solutions and training to ensure quality and organization.<br>
 										&emsp;&emsp;•	Monitored and reported procedures according to established specifications.<br>
 										&emsp;&emsp;•	Research and analysis of innovation projects in the post-construction: (1) analysis of causes and costs of rework and (2) development of a preventive maintenance program. <br>
