--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 								</details>
 								
 								<details style="text-align:left">
-									<summary> <b style="color:rgb(0, 0, 0);"> INOV Contacto Program, managed by AICEP: Data Analysis and Lean projects</b> [Sodecia, Czech Republic]</summary>
+									<summary> <b style="color:rgb(0, 0, 0);"> INOV Contacto Program: Data Analysis and Lean projects</b> [Sodecia, Czech Republic - managed by AICEP]</summary>
 										&emsp;&emsp;•	Designed a database about Customer Complaints and implemented it in SQL.<br>
 										&emsp;&emsp;•	Development of Continuous Improvement projects: elimination of 100% inspection (-144 hours/year), analysis and reduction of setup time (estimated reduction: -13%) and batch size optimization.<br>
 							
