--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 								<header class="major">
 									<h2>Experience</h2>
 								</header>
-								<p style="text-align:left"> To gain a comprehensive understanding of my projects, please find them listed below. By clicking on a specific project, you can access detailed information. </p>
+								<p style="text-align:left"> Check out my projects down below. By clicking on a specific project, you can access detailed information about it. </p>
 
 								<h2 style="text-align:left">AICEP </h2>
 
