--- a/certification.html
+++ b/certification.html
@@ -43,7 +43,7 @@
 							
 
 								<h2 >
-									<b>Data Science</b>
+									<b>Data Analytics</b>
 								</h2>
 								<p> 
 									&emsp;&emsp;• <a href="data/DatabasesandSQL.pdf" target="_blank" >Databases and SQL for Data Science with Python</a><br>
