--- a/index.html
+++ b/index.html
@@ -173,9 +173,10 @@
 
 								<details style="text-align:left">
 									<summary> <b style="color:rgb(0, 0, 0);"> Portfolio Manager</b> [Portugal]</summary>
-									<details style="text-align:left">
-										<summary> <b style="color:rgb(0, 0, 0);"> test </b> [Portugal]</summary>	
-									</details>
+									&emsp;&emsp;•	<mark>Portfolio Management:</mark>  .<br>
+									&emsp;&emsp;•	<mark>Contract Management:</mark>  .<br>
+									&emsp;&emsp;•	<mark>Databases Acquisitions:</mark>  <br>
+									&emsp;&emsp;•	<mark>Digital Transformation Projects:</mark>  <br>
 										
 								</details>
 								
