--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 								<details style="text-align:left">
 									<summary> <b style="color:rgb(0, 0, 0);"> Portfolio Manager</b> [Portugal]</summary>
-									This role has four main activities: <mark>Portfolio Management (PM)</mark>, <mark>Contract Management (CM) </mark>, <mark>Databases Acquisition (DA)</mark>, <mark>Digital Transformation Projects (DT)</mark> 
+									This role has four main activities: <mark>Portfolio Management (PM)</mark>, <mark>Contract Management (CM) </mark>, <mark>Databases Acquisition (DA)</mark>, <mark>Digital Transformation Projects (DT)</mark> <br>
 									&emsp;&emsp;•	  <br>
 									&emsp;&emsp;•	  <br>
 									&emsp;&emsp;•	  <br>
