--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 									<summary > <b style="color:rgb(0, 0, 0);">Workflow improvement using Lean tools in a non-profit organization </b> [Refood 100%, Portugal]</summary>
 										&emsp;&emsp;• Collaborated with the management team and teammates to uncover new process opportunities<br>
 										&emsp;&emsp;• Reduced non-value added time by 9% by implementing a Kanban system
-										<a href="images/refoodkanban.jpg" target="_blank" >(Figure 2)</a>.
+										<a href="images/refoodkanban.jpg" target="_blank" >(Figure 2)</a>
 										<br>
 										&emsp;&emsp;• Workspace organization through 5s methodology
 										<a href="images/refood5s.jpg" target="_blank" >(Figure 3)</a> <br>
