--- a/index.html
+++ b/index.html
@@ -167,18 +167,19 @@
 								<header class="major">
 									<h2>Experience</h2>
 								</header>
-								<p style="text-align:left"> Check out my projects down below. By clicking on a specific project, you can access detailed information about it. </p>
+								<p style="text-align:left"> Check out my projects down below. You can access detailed information about a specific project by clicking on it. </p>
 
 								<h2 style="text-align:left">AICEP </h2>
 
 								<details style="text-align:left">
 									<summary> <b style="color:rgb(0, 0, 0);"> Portfolio Manager</b> [Portugal]</summary>
 									This role has four key activities: <mark>Portfolio Management (PM)</mark>, <mark>Contract Management (CM)</mark>, <mark>Databases Acquisition (DA)</mark>, <mark>Digital Transformation(DT)</mark>. The last one acts as a transversal element that impacts the other three activities. <br>
-									&emsp;&emsp;•	  <br>
-									&emsp;&emsp;•	  <br>
-									&emsp;&emsp;•	  <br>
-									&emsp;&emsp;•	  <br>
-										
+									&emsp;&emsp;• (PM & DT) Responsible for the monthly and annual activity plan - automated with python <br>
+									&emsp;&emsp;• (PM & DT) Developed "Product GPS" dashboard in Looker Studio - data automated with python <br>
+									&emsp;&emsp;• (CM) Organized finished Public Contract and Direct award files for future audits  <br>
+									&emsp;&emsp;• (DA) Collaborated and monitored the entire acquisition process (planning to end of contract) of databases and other data sources <br>
+									&emsp;&emsp;• (DA & DT) Developed "Alerts" dashboard in Looker Studio to monitor budget and deadlines - data automated with python <br>
+									&emsp;&emsp;• (DT) Transformed and updated tables in BigQuery (python and airflow) <br>
 								</details>
 								
 								<details style="text-align:left">
