--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 									&emsp;&emsp;• (PM & DT) Responsible for the monthly and annual activity plan - automated with python <br>
 									&emsp;&emsp;• (PM & DT) Developed "Product GPS" dashboard in Looker Studio - data automated with python <br>
 									&emsp;&emsp;• (CM) Organized finished Public Contract and Direct award files for future audits  <br>
-									&emsp;&emsp;• (DA) Collaborated and monitored the entire acquisition process (planning to end of contract) of databases and other data sources <br>
+									&emsp;&emsp;• (DA) Collaborated and monitored the entire acquisition process (planning to end of contract) of databases<br>
 									&emsp;&emsp;• (DA & DT) Developed "Alerts" dashboard in Looker Studio to monitor budget and deadlines - data automated with python <br>
 									&emsp;&emsp;• (DT) Transformed and updated tables in BigQuery (python and airflow) <br>
 								</details>
