--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								</header>
 								
 								<h3 style="text-align:left"> 
-									 <b> Integrated Masters in Industrial Engineering and Management - University of Minho </b> (16/20)
+									 <b> Bachelor's and Master's in Industrial Engineering and Management - University of Minho </b> (16/20)
 								</h3>
 								
 										<p style="text-align:left;"><span class="image left"><img src="images/p7.jpg" alt="" style="max-height: 150px; max-width: 150px;" /></span> 
