--- a/certification.html
+++ b/certification.html
@@ -46,7 +46,9 @@
 									<b>Data Analytics</b>
 								</h2>
 								<p> 
-									IBM Data Science Professional Certificate <br>
+									IBM Data Science Professional Certificate <be>
+									
+									&emsp;&emsp;• <a href="data/DataAnalysiswithPython.pdf" target="_blank" >Data Analysis with Python</a><br>
 									&emsp;&emsp;• <a href="data/DatabasesandSQL.pdf" target="_blank" >Databases and SQL for Data Science with Python</a><br>
 									&emsp;&emsp;• <a href="data/PythonProjectforDataScience.pdf" target="_blank" >Python Project for Data Science</a><br>
 									&emsp;&emsp;• <a href="data/PythonforDataScienceAIDevelopment.pdf" target="_blank" >Python for Data Science, AI & Development</a><br>
