--- a/certification.html
+++ b/certification.html
@@ -46,7 +46,7 @@
 									<b>Data Analytics</b>
 								</h2>
 								<p> 
-									IBM Data Science Professional Certificate <be>
+									IBM Data Science Professional Certificate <br>
 									
 									&emsp;&emsp;• <a href="data/DataAnalysiswithPython.pdf" target="_blank" >Data Analysis with Python</a><br>
 									&emsp;&emsp;• <a href="data/DatabasesandSQL.pdf" target="_blank" >Databases and SQL for Data Science with Python</a><br>
