--- a/certification.html
+++ b/certification.html
@@ -46,8 +46,8 @@
 									<b>Data Analytics</b>
 								</h2>
 								<p> 
-									<summary> <a href="data/IBMDataScience.pdf" target="_blank" >IBM Data Science Professional Certificate</summary> <br>
-									
+									<a href="data/IBMDataScience.pdf" target="_blank" >IBM Data Science Professional Certificate<br>
+									<!--
 									&emsp;&emsp;• <a href="data/AppliedDataScienceCapstone.pdf" target="_blank" >Applied Data Science Capstone</a><br>
 									&emsp;&emsp;• <a href="data/MachineLearningwithPython.pdf" target="_blank" >Machine Learning with Python</a><br>
 									&emsp;&emsp;• <a href="data/DataVisualizationwithPython.pdf" target="_blank" >Data Visualization with Python</a><br>
@@ -58,7 +58,7 @@
 									&emsp;&emsp;• <a href="data/DataScienceMethodology.pdf" target="_blank" >Data Science Methodology</a><br>
 									&emsp;&emsp;• <a href="data/ToolsforDataScience.pdf" target="_blank" >Tools for Data Science</a><br>
 									&emsp;&emsp;• <a href="data/WhatisDataScience.pdf" target="_blank" >What is Data Science?</a>
-									
+									-->
 								</p>
 
 								<h2><b>Lean Six Sigma</b></h2>
