--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									</li>
 									<li class="style4">
 										<span class="icon solid fa-laptop"></span>
-										<strong>1</strong> Data Analytics
+										<strong>1</strong> Data Science
 									</li>
 									<li class="style5">
 										<span class="icon fa-gem"></span>
