--- a/certification.html
+++ b/certification.html
@@ -2,7 +2,17 @@
 
 <html>
 	<head>
-		<title>Certificates - Stellar by HTML5 UP</title>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-NJRCLTFP8V"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'G-NJRCLTFP8V');
+		</script>
+		
+		<title>Certificates</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
