--- a/index.html
+++ b/index.html
@@ -247,14 +247,14 @@
 												<div class="field half">
 													<label>
 														Your email:
-														<input type="email" name="_replyto">
+														<input required type="email" name="_replyto">
 													</label>
 											</div>
 											<div class="fields">
 												<div class="field">
 													<label>
 														Your message:
-														<textarea name="message" rows="5" ></textarea>
+														<textarea required name="message" rows="5" ></textarea>
 													</label>
 											</div>
 											
