--- a/certification.html
+++ b/certification.html
@@ -68,7 +68,7 @@
 									&emsp;&emsp;• <a href="data/WhatisDataScience.pdf" target="_blank" >What is Data Science?</a>
 									-->
 									<a href="excel/Coursera KA74A657NKZM.pdf" target="_blank" >Excel/VBA for Creative Problem Solving</a><br>
-									<a href="excel/Excel.pdf" target="_blank">Excel Basic and Intermediate</a>
+									<a href="excel/Excel.pdf" target="_blank">Excel Basic and Intermediate</a><br>
 									Data Analytics for Lean Six Sigma
 								</p>
 
