--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
 											<h2>Beatriz Rodrigues </h2>
 										
 										</header>
-										<p>Hello, I'm Beatriz Rodrigues, a Portfolio Manager at AICEP, a government Agency for the Ministry of Foreign Affairs of Portugal. 
-											I started my career at AICEP through the INOV Contacto program, where I had the opportunity to work as an Engineering Analyst in the Czech Republic. 
-											During this time, I collaborated with Sodecia Czech Republic, an automotive components manufacturer, to ultimately support their internationalization efforts.
+										<p> Hi, I’m Beatriz Rodrigues, a Developer based in Aarhus, Denmark with a background in Industrial Engineering and Management. I started my career optimizing manufacturing processes using Lean tools like SMED and Kanban—reducing setup times by 33% and rework costs by 79%, for example. Today, I apply that same mindset to building cloud solutions, automating workflows, and developing data pipelines. With experience in a broad range of technologies, from Python and SQL to Power Platform, Dataverse, and BigQuery, I focus on creating streamlined, data-driven solutions.
 											<br /> 
 											<!-- Wrapper Now, I would like to invite you to explore some of the projects I have undertaken and also the training I have received in the sections below. -->
 											</p>
