--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 											<h2>Beatriz Rodrigues </h2>
 										
 										</header>
-										<p> Hi, I’m Beatriz Rodrigues, a Developer based in Aarhus, Denmark with a background in Industrial Engineering and Management. I started my career optimizing manufacturing processes using Lean tools like SMED and Kanban—reducing setup times by 33% and rework costs by 79%, for example. Today, I apply that same mindset to building cloud solutions, automating workflows, and developing data pipelines. With experience in a broad range of technologies, from Python and SQL to Power Platform, Dataverse, and BigQuery, I focus on creating streamlined, data-driven solutions.
+										<p> Hi, I’m Beatriz Rodrigues, a Developer based in Aarhus, Denmark with a background in Industrial Engineering and Management.<br /> 
+											I started my career optimizing manufacturing processes using Lean tools like SMED and Kanban—reducing setup times by 33% and rework costs by 79%, for example. Today, I apply that same mindset to building cloud solutions, automating workflows, and developing data pipelines. With experience in a broad range of technologies, from Python and SQL to Power Platform, Dataverse, and BigQuery, I focus on creating streamlined, data-driven solutions.
 											<br /> 
 											<!-- Wrapper Now, I would like to invite you to explore some of the projects I have undertaken and also the training I have received in the sections below. -->
 											</p>
