--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Beatriz Rodrigues </h2>
+											<h2>About me </h2>
 										
 										</header>
-										<p> Hi, I’m Beatriz Rodrigues, a Developer based in Aarhus, Denmark with a background in Industrial Engineering and Management.<br /> 
-											I started my career optimizing manufacturing processes using Lean tools like SMED and Kanban—reducing setup times by 33% and rework costs by 79%, for example. <br /> 
+										<p> Based in Aarhus, Denmark, with a background in Industrial Engineering and Management, my career began with optimizing manufacturing processes using Lean tools like SMED or Kanban— for instance reducing setup times by 33% and rework costs by 79% <br /> 
 											Today, I apply that same mindset to building cloud solutions, automating workflows, and developing data pipelines. With experience in a broad range of technologies, from Python and SQL to Power Platform, Dataverse, and BigQuery, I focus on creating streamlined, data-driven solutions.
 											<br /> 
 											<!-- Wrapper Now, I would like to invite you to explore some of the projects I have undertaken and also the training I have received in the sections below. -->
