--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>About me </h2>
+											<h2>The Journey So Far</h2>
 										
 										</header>
 										<p> Based in Aarhus, Denmark, with a background in Industrial Engineering and Management, my career began with optimizing manufacturing processes using Lean tools like SMED or Kanban— for instance reducing setup times by 33% and rework costs by 79% <br /> 
