--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Hi, I'm Beatriz Rodrigues!</h1>
-						<p>MSc in Industrial Engineering and Management</p>
+						<p>Developer, MSc in Industrial Engineering and Management</p>
 					</header>
 
 				<!-- Nav -->
@@ -53,7 +53,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>The Journey So Far</h2>
+											<h2>the journey so far</h2>
 										
 										</header>
 										<p> Based in Aarhus, Denmark, with a background in Industrial Engineering and Management, my career began with optimizing manufacturing processes using Lean tools; for instance reducing setup times by 33% and rework costs by 79%. <br /> 
