--- a/certification.html
+++ b/certification.html
@@ -45,8 +45,8 @@
 								<h2>
 									<b>Cloud & Application Development</b></h2>
 								<p> 
-									<a href="data/Linguaskill - Beatriz Rodrigues.pdf" target="_blank" >Microsoft Fabric Engineer</a><br>
-									<a href="data/Linguaskill - Beatriz Rodrigues.pdf" target="_blank" >Power Apps (with Dataverse)</a><br>	
+									<a href="data/twoday-_-microsoft-fabric-engineer (1).pdf" target="_blank" >Microsoft Fabric Engineer</a><br>
+									Microsoft Power Platform - Power Apps 	
 								</p>
 								
 								
