--- a/index.html
+++ b/index.html
@@ -102,13 +102,10 @@
 								</h3>
 								
 								<p class="content">
-									I have certification in the following areas:
-								</p>
-
-
-								<p class="content">
+									I have certification in the following areas:<br>
+								
 									<b>Cloud & Application Development</b>
-								<p> 
+								<p class="content">
 									<a href="data/twoday-_-microsoft-fabric-engineer (1).pdf" target="_blank" >Microsoft Fabric Engineer</a><br>
 									Microsoft Power Platform - Power Apps 	
 								</p>
