--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 										</p>
 
 										<p style="text-align:left;">
-											<strong>Data Analysis & Data Science<</strong><br>
+											<strong>Data Analysis & Data Science</strong><br>
 											<a href="data/IBMDataScience.pdf" target="_blank" >IBM Data Science Professional Certificate<br>
 											<a href="excel/Coursera KA74A657NKZM.pdf" target="_blank" >Excel/VBA for Creative Problem Solving</a><br>
 											<a href="excel/Excel.pdf" target="_blank">Excel Basic and Intermediate</a><br>
