--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>The journey so far</h2>
+											<h2>Beatriz/h2>
 										
 										</header>
 										<p> Based in Aarhus, Denmark, with a background in Industrial Engineering and Management, my career began with optimizing manufacturing processes using Lean tools; for instance reducing setup times by 33% and rework costs by 79%. <br /> 
