--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
 								        <strong style="font-size: 1.1em; color: #444;">Data Analysis & Data Science</strong><br>
 								        <a href="data/IBMDataScience.pdf" target="_blank" style="color: #1a73e8;">IBM Data Science Professional Certificate</a><br>
 								        <a href="excel/Coursera KA74A657NKZM.pdf" target="_blank" style="color: #1a73e8;">Excel/VBA for Creative Problem Solving</a><br>
-								        <a href="excel/Excel.pdf" target="_blank" style="color: #1a73e8;">Excel Basic and Intermediate</a><br>
-								        Data Analytics for Lean Six Sigma
+								        <a href="excel/Excel.pdf" target="_blank" style="color: #1a73e8;">Excel Basic and Intermediate</a>
 								    </div>
 								
 								    <!-- Business & Process Improvement Section -->
