--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
 								    <div style="flex: 1; min-width: 220px; border: 1px solid #ccc; padding: 15px; border-radius: 8px; background-color: #f9f9f9; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
 								        <strong style="font-size: 1.1em; color: #444;">Cloud & Application Development</strong><br>
 								        <a href="data/twoday-_-microsoft-fabric-engineer (1).pdf" target="_blank" style="color: #1a73e8;">Microsoft Fabric Engineer</a><br>
-								        Microsoft Power Platform - Power Apps <br>
+								        Microsoft Power Apps <br>
 								    </div>
 								
 								    <!-- Data Analysis & Data Science Section -->
 								    <div style="flex: 1; min-width: 220px; border: 1px solid #ccc; padding: 15px; border-radius: 8px; background-color: #f9f9f9; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
 								        <strong style="font-size: 1.1em; color: #444;">Data Analysis & Data Science</strong><br>
-								        <a href="data/IBMDataScience.pdf" target="_blank" style="color: #1a73e8;">IBM Data Science Professional Certificate</a><br>
-								        <a href="excel/Coursera KA74A657NKZM.pdf" target="_blank" style="color: #1a73e8;">Excel/VBA for Creative Problem Solving</a><br>
+								        <a href="data/IBMDataScience.pdf" target="_blank" style="color: #1a73e8;">IBM Data Science</a><br>
+								        <a href="excel/Coursera KA74A657NKZM.pdf" target="_blank" style="color: #1a73e8;">Excel/VBA</a><br>
 								        <a href="excel/Excel.pdf" target="_blank" style="color: #1a73e8;">Excel Basic and Intermediate</a>
 								    </div>
 								
