--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 								    <!-- Cloud & Application Development Section -->
 								    <div style="flex: 1; min-width: 220px; border: 1px solid #ccc; padding: 15px; border-radius: 8px; background-color: #f9f9f9; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
 								        <strong style="font-size: 1.1em; color: #444;">Cloud & Application Development</strong><br>
-								        <a href="data/twoday-_-microsoft-fabric-engineer (1).pdf" target="_blank" style="color: #1a73e8;">Microsoft Fabric Engineer</a><br>
-								        Microsoft Power Apps <br>
+								        <a href="data/twoday-_-microsoft-fabric-engineer (1).pdf" target="_blank" >Microsoft Fabric Engineer</a><br>
+								        Microsoft Power Apps <br> 	
 								    </div>
 								
 								    <!-- Data Analysis & Data Science Section -->
