--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
 								    <!-- Data Analysis & Data Science Section -->
 								    <div style="flex: 1; min-width: 220px; border: 1px solid #ccc; padding: 15px; border-radius: 8px; background-color: #f9f9f9; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
 								        <strong style="font-size: 1.1em; color: #444;">Data Analysis & Data Science</strong><br>
-								        <a href="data/IBMDataScience.pdf" target="_blank" style="color: #1a73e8;">IBM Data Science</a><br>
-								        <a href="excel/Coursera KA74A657NKZM.pdf" target="_blank" style="color: #1a73e8;">Excel/VBA</a><br>
-								        <a href="excel/Excel.pdf" target="_blank" style="color: #1a73e8;">Excel Basic and Intermediate</a>
+								        <a href="data/IBMDataScience.pdf" target="_blank" >IBM Data Science</a><br>
+								        <a href="excel/Coursera KA74A657NKZM.pdf" target="_blank" >Excel/VBA</a><br>
+								        <a href="excel/Excel.pdf" target="_blank">Excel Basic and Intermediate</a>
 								    </div>
 								
 								    <!-- Business & Process Improvement Section -->
 								    <div style="flex: 1; min-width: 220px; border: 1px solid #ccc; padding: 15px; border-radius: 8px; background-color: #f9f9f9; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
 								        <strong style="font-size: 1.1em; color: #444;">Business & Process Improvement</strong><br>
-								        <a href="lean six sigma/Coursera J3UJ6SLRHRFF.pdf" target="_blank" style="color: #1a73e8;">Six Sigma Yellow Belt</a><br>
+								        <a href="lean six sigma/Coursera J3UJ6SLRHRFF.pdf" target="_blank">Six Sigma Yellow Belt</a><br>
 								        Data Analytics for Lean Six Sigma
 								    </div>
 								</div>
