--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 											<h2>Beatriz</h2>
 										
 										</header>
-										<p> Based in Aarhus, Denmark, with a background in Industrial Engineering and Management, my career began with optimizing manufacturing processes using Lean tools; for instance reducing setup times by 33% and rework costs by 79%. <br /> 
+										<p> I'm based in Aarhus, Denmark, with background in Industrial Engineering and Management. My journey began by optimizing manufacturing processes with Lean tools; for instance reducing setup times by 33% and rework costs by 79%. <br /> 
 											Today, I apply that same mindset to building <b>cloud solutions, automating workflows, and developing data pipelines</b>. With experience in a broad range of technologies, from Python and SQL to Power Platform, Dataverse, and BigQuery, I focus on creating streamlined, data-driven solutions.
 											<br /> 
 											<!-- Wrapper Now, I would like to invite you to explore some of the projects I have undertaken and also the training I have received in the sections below. -->
