--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							
-							<p>Hello, I'm Beatriz Rodrigues, a developer with background in Industrial Engineering and Management.</p>
+							<h2>Beatriz Rodrigues</h2>
+							<p>Developer with background in Industrial Engineering and Management. My journey began by optimizing manufacturing processes with Lean tools. Today, I apply that same mindset to building cloud solutions, automating workflows, and developing data pipelines.</p>
 							
 						</section>
 						<section>
