--- a/index.html
+++ b/index.html
@@ -141,6 +141,20 @@
 								</header>
 								<p style="text-align:left"> Check out my projects down below. You can access detailed information about a specific project by clicking on it. </p>
 
+								<h2 style="text-align:left">AVK </h2>
+
+								<details style="text-align:left">
+									<summary> <b style="color:rgb(0, 0, 0);"> BI and Automation developer</b> [Portugal]</summary>
+									This role has four key activities: <mark>ABC</mark>, <mark> DFG </mark>, <mark>HIJ</mark>, <mark>KLM</mark>. The last one acts as a transversal element that impacts the other three activities. <br>
+									&emsp;&emsp;• Bla bla <br>
+									&emsp;&emsp;• Bla bla <br>
+									&emsp;&emsp;• Bla bla  <br>
+									&emsp;&emsp;• Bla bla <br>
+									&emsp;&emsp;• Bla bla <br>
+									&emsp;&emsp;• Bla bla <br>
+								</details>
+
+								
 								<h2 style="text-align:left">AICEP </h2>
 
 								<details style="text-align:left">
