--- a/index.html
+++ b/index.html
@@ -144,14 +144,8 @@
 								<h2 style="text-align:left">AVK </h2>
 
 								<details style="text-align:left">
-									<summary> <b style="color:rgb(0, 0, 0);"> BI and Automation developer</b> [Portugal]</summary>
-									This role has four key activities: <mark>ABC</mark>, <mark> DFG </mark>, <mark>HIJ</mark>, <mark>KLM</mark>. The last one acts as a transversal element that impacts the other three activities. <br>
-									&emsp;&emsp;• Bla bla <br>
-									&emsp;&emsp;• Bla bla <br>
-									&emsp;&emsp;• Bla bla  <br>
-									&emsp;&emsp;• Bla bla <br>
-									&emsp;&emsp;• Bla bla <br>
-									&emsp;&emsp;• Bla bla <br>
+									<summary> <b style="color:rgb(0, 0, 0);"> BI and Automation developer</b> [Denmark]</summary>
+									
 								</details>
 								<br>
 
